--- a/client/src/pages/Search/search.css
+++ b/client/src/pages/Search/search.css
@@ -2,6 +2,12 @@
     text-align: center;
 }
 
+.resultStyle {
+    border: 1px solid black;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
 .buttonStyle {
     display: flex;
     margin: auto;
